# alla

./: Cargo.toml  build.rs
config/: config.ini
src/: config.rs  fsio.rs  ini.rs  main.rs  sdl_rendering.rs
src/postgresqlsrc/: create.rs  insert.rs  table.rs
src/sdl_rendering/: shader_utils.rs
src/sdl_rendering/shader_utils/: fragment_shader.glsl
